# atrium

./: .gitignore  .tool-versions  Cargo.toml  README.md  REFERENCES.md  idea.md  trace.pftrace
assets/: ui.html
assets/hrtf/: README.md
assets/shaders/: grass.wgsl  grass_wind.wgsl
atmospheres/: default.yaml
crates/bevy-ui/: Cargo.toml
crates/bevy-ui/src/: camera.rs  grass_material.rs  grass_wind.rs  hud.rs  input.rs  lib.rs  scatter.rs  scene.rs  telemetry.rs  weather.rs
crates/bevy-ui/src/ecs/: components.rs  mod.rs  observers.rs
crates/bevy-ui/src/scene/: export.rs  import.rs  mod.rs  save.rs  schema.rs
crates/bevy-ui/tests/: round_trip.rs
crates/core/: Cargo.toml
crates/core/src/: ambisonics.rs  commands.rs  dbap.rs  directivity.rs  lib.rs  listener.rs  panner.rs  room.rs  source.rs  speaker.rs  telemetry.rs  types.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
docs/: IAMF.md  directivity-and-energy-transfer.md  eigenbeam-source-directivity.md  listener-tracking.md
environments/: cathedral.yaml  riverside.yaml  small_atrium.yaml
processors/: small_room.yaml
rooms/: atrium_6x4.yaml
scenes/: default.yaml
sources/: campfire.yaml  djembe.yaml  purring.yaml
src/: config.rs  lib.rs  main.rs
src/audio/: atmosphere.rs  binaural.rs  convolver.rs  decode.rs  distance.rs  filters.rs  masking.rs  mixer.rs  mod.rs  output.rs  propagation.rs  sound_profile.rs  spectral_profile.rs  test_node.rs
src/engine/: commands.rs  memprof.rs  mod.rs  profiler.rs  scene.rs  telemetry.rs
src/pipeline/: mix_stage.rs  mod.rs  path.rs  path_effects.rs  path_resolvers.rs  path_stage.rs  perceptual.rs  renderer.rs  room_acoustics.rs  source_stage.rs
src/pipeline/renderers/: ambisonics.rs  binaural.rs  dbap.rs  mod.rs  multichannel.rs  world_locked.rs
src/pipeline/stages/: air_absorption.rs  ambi_decode.rs  ambi_multi_delay.rs  ambisonics_encode.rs  dbap_gains.rs  delay_comp.rs  distance_directivity.rs  distance_gains.rs  early_reflections.rs  fdn_reverb.rs  ground_effect.rs  lfe_crossover.rs  master_gain.rs  mod.rs  pipeline_analysis.rs  reflections.rs  stereo_gains.rs  vbap_gains.rs
src/processors/: early_reflections.rs  fdn_reverb.rs  mod.rs
src/server/: messages.rs  mod.rs  ui.rs  websocket.rs
src/spatial/: directivity.rs  listener.rs  mod.rs  panner.rs  sound_profile.rs  source.rs
src/synth/: mod.rs  noise.rs  rain.rs  rain_v2.rs  wave.rs  wind.rs
src/world/: mod.rs  ray.rs  room.rs  types.rs
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: main.ts  store-controller.ts  store.ts  types.ts
ui/src/components/: atmosphere-panel.ts  atrium-app.ts  gain-slider.ts  help-overlay.ts  hud-panel.ts  listener-info.ts  render-mode.ts  source-list.ts  source-row.ts  status-indicator.ts
ui/src/three/: animate.ts  atrium.ts  coords.ts  directivity.ts  environment.ts  interactions.ts  listener.ts  room.ts  scene.ts  sound-field.ts  sources.ts  speakers.ts
ui/src/workers/: sound-field.worker.ts
ui/src/ws/: connection.ts
