[workspace]
members = [".", "crates/core"]

[package]
name = "atrium"
version = "0.1.0"
edition = "2021"
description = "Spatial audio engine with acoustic zone simulation"
default-run = "atrium"

[dependencies]
atrium-core = { path = "crates/core" }
cpal = "0.15"
rtrb = "0.3"
tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Symphonia: only enable the codecs/formats we need
symphonia = { version = "0.5", features = ["mp3", "wav", "pcm", "aac"] }
sofar = "0.2.1"
fft-convolver = "0.3.0"
