[workspace]
members = [".", "crates/core", "crates/tui"]

[package]
name = "atrium"
version = "0.1.0"
edition = "2021"
description = "Spatial audio engine with acoustic zone simulation"
default-run = "atrium"

[dependencies]
atrium-core = { path = "crates/core" }
cpal = "0.15"
rtrb = "0.3"
tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Symphonia: only enable the codecs/formats we need
symphonia = { version = "0.5", features = ["mp3", "wav", "pcm", "aac"] }
sofar = "0.2.1"
fft-convolver = "0.3.0"
atrium-tui = { path = "crates/tui", optional = true }

# Profiling (optional, zero-cost when disabled)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
tracing-perfetto = { version = "0.1", optional = true }
tracing-flame = { version = "0.2", optional = true }

[features]
default = ["tui"]
tui = ["dep:atrium-tui"]
profiler = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-perfetto", "dep:tracing-flame"]
memprof = []

[profile.profiling]
inherits = "release"
debug = true
strip = false
