[package]
name = "atrium-bevy"
version = "0.1.0"
edition = "2021"
description = "Bevy visualization for the Atrium spatial audio engine"

[dependencies]
atrium-core = { path = "../core" }
bevy = { version = "0.18", features = ["bevy_dev_tools", "serialize", "jpeg"] }
rand = "0.9"
rtrb = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
